--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^5.3.0",
-    "reselect": "^5.1.1"
+    "react-router-dom": "^7.6.2",
+    "reselect": "^5.1.1",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
